<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ereigniskette</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Hauptmenü</string>
    <string name="showEvent">Ereignis anzeigen</string>
    <string name="addEvent">Neues Ereignis hinzufügen</string>
    <string name="title_activity_choose_event">ChooseEvent</string>
    <string name="chooseEvent">Wähle gewünschtes Ereignis aus der folgenden Liste:</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="name">Hallo</string>
    <string name="date">Datum</string>
    <string name="saveNext">Speichern und weiter</string>
    <string name="people">Personen</string>
    <string name="locations">Orte</string>
    <string name="addPreviousEvent">Vorgängerereignis hinzufügen</string>
    <string name="addNextEvent">Nachfolgerereignisse hinzufügen</string>
    <string name="previousEvent">Vorgänger</string>
    <string name="nextEvent">Nachfolger</string>
    <string name="description">Kurzbeschreibung</string>
    <string name="title_activity_add_previous">AddPrevious</string>
    <string name="title_activity_add_next">AddNext</string>
    <string name="title_activity_add_persons">AddPersons</string>
    <string name="title_activity_new_person">NewPersons</string>
    <string name="title_activity_add_location">AddLocation</string>
    <string name="title_activity_new_location">NewLocation</string>
    <string name="title_activity_event_details">Event</string>
    <string name="data">aus Datenbank holen</string>
    <string name="edit">Bearbeiten</string>
    <string name="back">Zurück</string>
    <string name="addLocations">Orte hinzufügen</string>
    <string name="addPersons">Personen hinzufügen</string>
    <string name="newLocation">Neuen Ort hinzufügen</string>
    <string name="newPerson">neue Person hinzufügen</string>
    <string name="save">Speichern</string>

</resources>
